@@ -48,7 +48,7 @@ char * edit_task_omp (credentials_t *, const char *, const char *, const char *,
                       const char *, const char *);
 char * save_task_omp (credentials_t *, const char *, const char *, const char *,
                       const char *, const char *, const char *, const char *,
-                      const char *);
+                      const char *, const char *);
 char * abort_task_omp (credentials_t *, const char *);
 char * resume_stopped_task_omp (credentials_t *, const char *);
 char * start_task_omp (credentials_t *, const char *);
